--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,35 +3,26 @@
     <div class="container">
       <h1>My Day</h1>
       <p>All my tasks in one place</p>
-      <input
-        class="new-todo"
-        placeholder="Type new todo"
-        autofocus
-        type="text"
-        [formControl]="newTaskControl"
-        (keydown.enter)="changehandler()"
-        />
-      </div>
-    </header>
-    <div class="container todoapp-wrapper">
+      <input class="new-todo" placeholder="Type new todo" autofocus type="text" [formControl]="newTaskControl"
+        (keydown.enter)="changehandler()" />
+    </div>
+  </header>
+  <div class="container todoapp-wrapper">
 
-      <!-- This section should be hidden by default and shown when there are todos -->
-      <section class="main">
-        <ul class="todo-list">
-          @for (tak of tareasByFilter(); track tak; let i = $index) {
-            <li
-              (dblclick)="updateTaskEditingMode(i)"
-              [class.editing]="tak.editing"
-              [class.completed]="tak.completed" >
-              <div class="view">
-                <input class="toggle" type="checkbox"  [checked]="tak.completed" (change)="updatetask(i)" />
-                <label>{{tak.title}}</label>
-                <button class="destroy" (click)="deletetask(i)"></button>
-              </div>
-              <input class="edit" (keydown.enter)="updateTaskText(i,$event)" [value]="tak.title" />
-            </li>
-          }
-          <!--
+    <!-- This section should be hidden by default and shown when there are todos -->
+    <section class="main">
+      <ul class="todo-list">
+        @for (tak of tareasByFilter(); track tak; let i = $index) {
+        <li (dblclick)="updateTaskEditingMode(i)" [class.editing]="tak.editing" [class.completed]="tak.completed">
+          <div class="view">
+            <input class="toggle" type="checkbox" [checked]="tak.completed" (change)="updatetask(i)" />
+            <label title="Para editar dar doble clic">{{tak.title}}</label>
+            <button class="destroy" (click)="deletetask(i)"></button>
+          </div>
+          <input class="edit" (keydown.enter)="updateTaskText(i,$event)" [value]="tak.title" />
+        </li>
+        }
+        <!--
           <li class="completed">
             <div class="view">
               <input class="toggle" type="checkbox" checked />
@@ -58,35 +49,37 @@
             <input class="edit" value="Make dishes" />
           </li>
           -->
-        </ul>
-      </section>
-      <!-- This footer should be hidden by default and shown when there are todos -->
-      @if (tareasByFilter().length>0) {
-        <footer class="footer">
-          <!-- This should be `0 items left` by default -->
-          <span class="todo-count" >
-            <strong>{{tareasByFilter().length}}</strong>
-            @if (tareasByFilter().length == 1) {
-              <span> item </span>
-            } @else {
-              items
-            }
-          </span>
-          <!-- Remove this if you don't implement routing -->
-          <ul class="filters">
-            <li>
-              <a (click)="changeFilter('all')" [class.selected]="filter()==='all'">All</a>
-            </li>
-            <li>
-              <a (click)="changeFilter('pending')" [class.selected]="filter()==='pending'">Pending</a>
-            </li>
-            <li>
-              <a (click)="changeFilter('completed')" [class.selected]="filter()==='completed'" >Completed</a>
-            </li>
-          </ul>
-          <!-- Hidden if no completed items are left ↓ -->
-          <button class="clear-completed">Clear completed</button>
-        </footer>
-      }
-    </div>
-  </section>
+      </ul>
+    </section>
+    <!-- This footer should be hidden by default and shown when there are todos -->
+
+    <footer class="footer">
+      <!-- This should be `0 items left` by default -->
+      <span class="todo-count">
+        <strong>{{tareasByFilter().length}}</strong>
+        @if (tareasByFilter().length == 1) {
+        <span> item </span>
+        } @else {
+        items
+        }
+      </span>
+      <!-- Remove this if you don't implement routing -->
+      <!-- @if (tareasByFilter().length>0) { -->
+      <ul class="filters">
+        <li>
+          <a (click)="changeFilter('all')" [class.selected]="filter()==='all'">All</a>
+        </li>
+        <li>
+          <a (click)="changeFilter('pending')" [class.selected]="filter()==='pending'">Pending</a>
+        </li>
+        <li>
+          <a (click)="changeFilter('completed')" [class.selected]="filter()==='completed'">Completed</a>
+        </li>
+      </ul>
+      <!-- Hidden if no completed items are left ↓ -->
+      <button (click)="deletetaskfilter()" class="clear-completed">Clear completed</button>
+    <!-- } -->
+    </footer>
+
+  </div>
+</section>
